local/home.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "home"
  namespace: "door"
  labels:
    app: "home"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "home"
  template:
    metadata:
      labels:
        app: "home"
    spec:
      containers:
      - name: "home"
        image: "home:1.0.0"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "home"
  namespace: "door"
  labels:
    app: "home"
spec:
  type: "NodePort"
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
    #nodePort: 30080
  selector:
    app: "home"
