local/school-dashboard-api.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "school-dashboard-api"
  namespace: "door"
  labels:
    app: "school-dashboard-api"
spec:
  type: "NodePort"
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 3000
  selector:
    app: "school-dashboard-api"
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "school-dashboard-api"
  namespace: "door"
  labels:
    app: "school-dashboard-api"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "school-dashboard-api"
  template:
    metadata:
      labels:
        app: "school-dashboard-api"
    spec:
      containers:
      - name: "school-dashboard-api"
        image: "door/school-dashboard-api:local"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
